fix flexbox shrinking issue of collapse-line

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -129,6 +129,7 @@ button[disabled] {
 
 .nested-comments-stack {
   display: flex;
+  flex-direction: row;
 }
 
 .nested-comments {
@@ -136,17 +137,18 @@ button[disabled] {
 }
 
 .collapse-line {
+  flex-shrink: 0;
   border: none;
   background: none;
   padding: 0;
   width: 30px;
-  margin-left: 2rem;
+  margin-left: 1rem;
   margin-right: 1rem;
-  margin-bottom: .5rem;
+  margin-bottom: .5rem; 
   position: relative;
   cursor: pointer;
   outline: none;
-  transform: translateX(-50%);
+  /* transform: translateX(-50%); */
 }
 
 .collapse-line::before {
